# noornote

./: .eslintrc.js  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  current-task.md  index.html  package-lock.json  package.json  start-relay-inspector.sh  tsconfig.json  vite.config.ts
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
deployment/: release.sh
docs/archiv/: current-task-v1-v2-migration.md  duplication-analysis-modals.md  mutual-check-feature-ARCHIVE.md  nostr-tools-migration.md  roadmap.md  v1-to-v2-migration.md
docs/features/: LIST-MANAGEMENT-SPEC.md  NIP46-Learning.md  README.md  article-notification.md  article-timeline.md  bookmark-cards-folders.md  dm-compose-modal.md  embedded-relay.md  encryption-fallback-logic.md  list-orchestrator-refactoring.md  long-form-post-editor.md  mount-bookmark-folder-to-profile.md  mute-list-bugs.md  mutual-check-feature-01-static-list.md  mutual-check-feature-02-unfollow-detection.md  mutual-check-feature-03-new-mutual-detection.md  mutual-check-feature-05-reciprocity.md  nip17-private-dms.md  nip51-categorized-bookmarks.md  noorsigner-multi-account.md  task-hell-thread.md
docs/todos/: article-editor-unsaved-changes.md  (+21 more)
public/: manifest.json
relay/: .gitignore  README.md  docker-compose.yml  strfry-router.conf  strfry.conf
src/: App.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: key_signer.rs  key_signer_windows.rs  lib.rs
tools/: relay-inspector.html
(+395 files in other folders)
