[package]
name = "noornote"
version = "0.2.3"
description = "A Nostr desktop client for sovereign communication"
authors = ["77elements"]
license = "MIT"
repository = "https://github.com/77elements/noornote"
homepage = "https://github.com/77elements/noornote/releases"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-keyring = "0.1.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
